--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 
     <!-- Lab 1: Homepage -->
     <section id="tab1" class="tab-content active" role="tabpanel">
+      <div class="intro">
+        <h1>Hi, I'm Risha.</h1>
+        <p><strong>Who are you?</strong><br>I'm an Informatics student at the University of Washington with interests in design, technology, and problem-solving.</p>
+
+        <p><strong>What are you specializing at??</strong><br>I'm specializing in Data Science.</p>
+
+        <p><strong>What do you care about?</strong><br>I care about creating accessible, user-centered solutions that are meaningful and impactful.</p>
+
+        <p><strong>What interests you the most?</strong><br>I'm most interested in bridging design thinking and technical execution to create real business impact.</p>
+      </div>
       <div id="sketch-container-sk1" class="sketch-container"></div>
     </section>
 
