--- a/index.html
+++ b/index.html
@@ -50,29 +50,38 @@
     </section>
 
     <!-- Homework 4: Sketch 1 -->
-    <section id="tab2" class="tab-content" role="tabpanel">
-      <div id="sketch-container-sk2" class="sketch-container"></div>
-      <div id="sketch-drawing-sk2" class="sketch-evolution">
-        <!-- Project narrative template: replace the text below with your own narrative -->
-        <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
-          <h3 id="sk2-narrative-title">Sketch narrative (replace this and add to the other two sketches!)</h3>
-          <p class="small-note">Replace this entire block with your own text when submitting.</p>
-          <p>
-            Context: Briefly describe the situation or user need this sketch addresses. For example,
-            "This sketch visualizes sunrise/sunset behavior for a simple teaching demo on coordinate
-            systems and interaction." Keep it short — 1–2 sentences.
-          <ul>
-            <li><strong>Context:</strong> Who is this for? In what context will it be used? (e.g., mountain, pomodoro,
-              running, cooking, breathing?)</li>
-            <li><strong>Design decisions:</strong> Explain 2–3 key choices you made (layout, color, interaction) and why
-              you made them. Use plain language and reference any constraints (time, accessibility,
-              or target device).</li>
-            <li><strong>Future work:</strong> 1–2 ideas for improvements or extensions.</li>
-          </ul>
-          </p>
-        </div>
-      </div>
-    </section>
+    <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
+      <h3 id="sk2-narrative-title">Sketch narrative</h3>
+
+      <p>
+        I chose to create a dancer poses clock because I love to dance and I’m on a dance team.
+        I thought it would be a fun way to show time using different poses.
+      </p>
+
+      <ul>
+        <li>
+          <strong>Context:</strong> This clock is for dancers, and it could be used during practice to quickly tell the time by
+          looking at the different poses.
+        </li>
+        <li>
+          <strong>Design decisions:</strong> I used the legs and hands of the big dancer in the center so the poses are easy
+          to read and the “clock hands” don’t overlap too much. I also used color to show which limbs are acting as the
+          clock hands, and I made the hour hand thicker so it’s easier to distinguish from the minute hand. I included
+          a key above the clock so users understand how to read it.
+        </li>
+        <li>
+          <strong>Future work:</strong> In the future, I would design each pose to look more like the number it represents,
+          so it’s easier to read at a quick glance. I would also clean up the big dancer design to look more visually
+          appealing overall.
+        </li>
+      </ul>
+
+      <img
+        src="images/DP-Sketch.png"
+        alt="Sketch of a dancer poses clock concept"
+        class="sketch-image"
+      />
+    </div>
 
     <!-- Homework 4: Sketch 2 -->
     <section id="tab3" class="tab-content" role="tabpanel">
