--- a/index.html
+++ b/index.html
@@ -50,42 +50,74 @@
     </section>
 
     <!-- Homework 4: Sketch 1 -->
-    <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
-      <h3 id="sk2-narrative-title">Sketch narrative</h3>
+    <section id="tab2" class="tab-content" role="tabpanel">
+      <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
+        <h3 id="sk2-narrative-title">Clock Narrative:</h3>
 
-      <p>
-        I chose to create a dancer poses clock because I love to dance and I’m on a dance team.
-        I thought it would be a fun way to show time using different poses.
-      </p>
+        <p>
+          I chose to create a dancer poses clock because I love to dance and I’m on a dance team.
+          I thought it would be a fun way to show time using different poses.
+        </p>
 
-      <ul>
-        <li>
-          <strong>Context:</strong> This clock is for dancers, and it could be used during practice to quickly tell the time by
-          looking at the different poses.
-        </li>
-        <li>
-          <strong>Design decisions:</strong> I used the legs and hands of the big dancer in the center so the poses are easy
-          to read and the “clock hands” don’t overlap too much. I also used color to show which limbs are acting as the
-          clock hands, and I made the hour hand thicker so it’s easier to distinguish from the minute hand. I included
-          a key above the clock so users understand how to read it.
-        </li>
-        <li>
-          <strong>Future work:</strong> In the future, I would design each pose to look more like the number it represents,
-          so it’s easier to read at a quick glance. I would also clean up the big dancer design to look more visually
-          appealing overall.
-        </li>
-      </ul>
+        <ul>
+          <li>
+            <strong>Context:</strong> This clock is for dancers, and it could be used during practice to quickly tell the time by
+            looking at the different poses.
+          </li>
+          <li>
+            <strong>Design decisions:</strong> I used the legs and hands of the big dancer in the center so the poses are easy
+            to read and the “clock hands” don’t overlap too much. I also used color to show which limbs are acting as the
+            clock hands, and I made the hour hand thicker so it’s easier to distinguish from the minute hand. I included
+            a key above the clock so users understand how to read it.
+          </li>
+          <li>
+            <strong>Future work:</strong> In the future, I would design each pose to look more like the number it represents,
+            so it’s easier to read at a quick glance. I would also clean up the big dancer design to look more visually
+            appealing overall.
+          </li>
+        </ul>
 
-      <img
-        src="images/DP-Sketch.png"
-        alt="Sketch of a dancer poses clock concept"
-        class="sketch-image"
-      />
-    </div>
-
+        <img
+          src="images/DP-Sketch.png"
+          alt="Sketch of a dancer poses clock concept"
+          class="sketch-image"
+        />
+      </div>
+    </section>
     <!-- Homework 4: Sketch 2 -->
     <section id="tab3" class="tab-content" role="tabpanel">
-      <div id="sketch-container-sk3" class="sketch-container"></div>
+      <div class="sketch-narrative" aria-labelledby="sk3-narrative-title">
+        <h3 id="sk3-narrative-title">Clock Narrative:</h3>
+
+        <p>
+          I chose to create a progress ring clock to visually show the progression of time.
+          The outer ring represents the hour, the middle ring represents the minute, and the inner ring
+          represents the second.
+        </p>
+
+        <ul>
+          <li>
+            <strong>Context:</strong> This clock could be used by students or runners who want to quickly
+            understand how time is progressing at a glance.
+          </li>
+          <li>
+            <strong>Design decisions:</strong> I made each ring a different color so the different units
+            of time are easy to distinguish from one another. I also included tick marks so users, such
+            as runners, can count time more precisely if they want to.
+          </li>
+          <li>
+            <strong>Future work:</strong> If I were to iterate on this clock, I would add additional rings
+            for the day and year. I would also include text at the top to provide more detailed time
+            information.
+          </li>
+        </ul>
+
+        <img
+          src="images/PR-Sketch.png"
+          alt="Sketch of a progress ring clock concept"
+          class="sketch-image"
+        />
+      </div>
     </section>
 
     <!-- Homework 4: Sketch 3 -->
