--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Homework 4: Sketch 1 -->
     <section id="tab2" class="tab-content" role="tabpanel">
-      <div class="sketch-narrative" aria-labelledby="sk2-narrative-title">
+      <div id="sketch-container-sk2" class="sketch-container"></div>
         <h3 id="sk2-narrative-title">Clock Narrative:</h3>
 
         <p>
@@ -86,7 +86,7 @@
     </section>
     <!-- Homework 4: Sketch 2 -->
     <section id="tab3" class="tab-content" role="tabpanel">
-      <div class="sketch-narrative" aria-labelledby="sk3-narrative-title">
+      <div id="sketch-container-sk3" class="sketch-container"></div>
         <h3 id="sk3-narrative-title">Clock Narrative:</h3>
 
         <p>
@@ -122,7 +122,36 @@
 
     <!-- Homework 4: Sketch 3 -->
     <section id="tab4" class="tab-content" role="tabpanel">
-      <div id="sketch-container-sk4" class="sketch-container"></div>
+      <div id="sketch-container-sk4" class="sketch-container">
+        <h3 id="sk4-narrative-title">Clock Narrative:</h3>
+
+        <p>
+          I created a candle clock as a calming and relaxing way to tell time.
+        </p>
+
+        <ul>
+          <li>
+            <strong>Context:</strong> This clock is intended for students who are studying and want a
+            more calming way to keep track of time while helping reduce stress.
+          </li>
+          <li>
+            <strong>Design decisions:</strong> I used blue and yellow to represent AM and PM. I included
+            markers along the candle so users can count time more precisely, while also adding text at
+            the top so the time can be understood quickly at a glance.
+          </li>
+          <li>
+            <strong>Future work:</strong> In the future, I would improve the overall visual appeal of the
+            clock. The blue and yellow dots along the side of the candle were originally meant to represent
+            melting wax to show the passage of time, and I would work on implementing that idea more clearly.
+          </li>
+        </ul>
+
+        <img
+          src="images/Candle-Sketch.png"
+          alt="Sketch of a candle clock concept"
+          class="sketch-image"
+        />
+      </div>
     </section>
 
 
