--- a/index.html
+++ b/index.html
@@ -159,9 +159,15 @@
           I chose this Spotify dataset from Kaggle because it allows me to analyze trends over time, compare artists and songs, and explore relationships between popularity and audience reach. The dataset includes a mix of track, artist, and album information from 2009–2025, including variables like artist popularity, artist follower count, and track popularity. This made it possible to compare artists by scale, popularity, and content.
         </p>
 
+        <p class="data-source">
+          Data source:
+            <a href="https://www.kaggle.com/datasets/wardabilal/spotify-global-music-dataset-20092025?resource=download">
+            Spotify Global Music Dataset (2009–2025) – Kaggle
+            </a>
+        </p>
         <h3>Why did you choose that title for your story?</h3>
         <p>
-          I called it “Artist Impact Map” because it maps artists into a shared space where their “impact” can be compared from multiple angles: followers (reach), popularity (mainstream success), and how much they appear in the dataset (bubble size). The word “map” also reflects that this isn’t a single ranking, but a layout that allows viewers to explore clusters and outliers.
+          I called it “Spotify Artist Impact Map” because it maps artists into a shared space where their “impact” can be compared from multiple angles: followers (reach), popularity (mainstream success), and how much they appear in the dataset (bubble size). The word “map” also reflects that this isn’t a single ranking, but a layout that allows viewers to explore clusters and outliers.
         </p>
 
         <h3>Is the visualization author-driven or user-driven? What genre is it?</h3>
@@ -188,9 +194,9 @@
           <li>They correctly interpreted darker pink as indicating more explicit content after referencing the legend.</li>
         </ul>
         <p><strong>Narrative they picked up:</strong></p>
-        <blockquote>
+        <p>
           “Most of these artists are mainstream, and a lot of the music is at least somewhat explicit, but not all of it.”
-        </blockquote>
+        </p>
 
         <h4>Interview 2</h4>
         <p><strong>What they pointed out:</strong></p>
@@ -201,9 +207,9 @@
           <li>They confirmed that the legend helped them understand the color pattern.</li>
         </ul>
         <p><strong>Narrative they picked up:</strong></p>
-        <blockquote>
+        <p>
           “This shows which artists show up the most in your dataset and how their popularity compares.”
-        </blockquote>
+        </p>
 
         <h3>What design principles guided your encoding choices?</h3>
         <p>
@@ -215,6 +221,28 @@
           For clarity, I included axis labels, tick marks, and a legend placed outside the plot so it wouldn’t obscure the data. In terms of hierarchy, the title is most prominent, followed by a short explanation of how to read the visualization, and then the plot itself. Detailed artist information is revealed only on hover to avoid clutter. For memorability, the pink color scale makes explicitness stand out, while bubble size helps viewers remember which artists dominate the dataset. The hover interaction also helps connect abstract shapes to real artist names.
         </p>
 
+        <h3>Sketches</h3>
+        <h4>Initial Sketch 1</h4>
+        <img src="images/Initial1.png" alt="Initial Sketch 1" class="sketch-image">
+
+        <h4>Initial Sketch 2</h4>
+        <img src="images/Initial2.png" alt="Initial Sketch 2" class="sketch-image">
+
+        <h4>Initial Sketch 3</h4>
+        <img src="images/Initial3.png" alt="Initial Sketch 3" class="sketch-image">
+
+        <h4>Initial Sketch 4</h4>
+        <img src="images/Initial4.png" alt="Initial Sketch 4" class="sketch-image">
+
+        <h4>Iterated Sketch</h4>
+        <img src="images/Iterated-Sketch.jpg" alt="Iterated Sketch" class="sketch-image">
+
+        <p class="sketch-explanation">
+          <strong>Explanation:</strong>
+          After feedback from classmates, I decided to add interactivity for users through a hover feature. 
+          I also combined ideas from the initial sketches to create a clearer narrative from the dataset, 
+          focusing on comparing artists by popularity, audience reach, and explicit content.
+        </p>
       </div>
     </section>
 
