Index File Changes

--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
     <section id="tab2" class="tab-content" role="tabpanel">
       <div id="sketch-container-sk2" class="sketch-container"></div>
         <h3 id="sk2-narrative-title">Clock Narrative:</h3>
-
         <p>
           I chose to create a dancer poses clock because I love to dance and I’m on a dance team.
           I thought it would be a fun way to show time using different poses.
         </p>
-
         <ul>
           <li>
             <strong>Context:</strong> This clock is for dancers, and it could be used during practice to quickly tell the time by
@@ -67,25 +65,22 @@
             appealing overall.
           </li>
         </ul>
-
         <img
           src="images/DP-Sketch.png"
           alt="Sketch of a dancer poses clock concept"
           class="sketch-image"
         />
-      </div>
     </section>
+
     <!-- Homework 4: Sketch 2 -->
     <section id="tab3" class="tab-content" role="tabpanel">
       <div id="sketch-container-sk3" class="sketch-container"></div>
         <h3 id="sk3-narrative-title">Clock Narrative:</h3>
-
         <p>
           I chose to create a progress ring clock to visually show the progression of time.
           The outer ring represents the hour, the middle ring represents the minute, and the inner ring
           represents the second.
         </p>
-
         <ul>
           <li>
             <strong>Context:</strong> This clock could be used by students or runners who want to quickly
@@ -102,24 +97,20 @@
             information.
           </li>
         </ul>
-
         <img
           src="images/PR-Sketch.png"
           alt="Sketch of a progress ring clock concept"
           class="sketch-image"
         />
-      </div>
     </section>
 
     <!-- Homework 4: Sketch 3 -->
     <section id="tab4" class="tab-content" role="tabpanel">
-      <div id="sketch-container-sk4" class="sketch-container">
+      <div id="sketch-container-sk4" class="sketch-container"></div>
         <h3 id="sk4-narrative-title">Clock Narrative:</h3>
-
         <p>
           I created a candle clock as a calming and relaxing way to tell time.
         </p>
-
         <ul>
           <li>
             <strong>Context:</strong> This clock is intended for students who are studying and want a
@@ -136,13 +127,11 @@
             melting wax to show the passage of time, and I would work on implementing that idea more clearly.
           </li>
         </ul>
-
         <img
           src="images/Candle-Sketch.png"
           alt="Sketch of a candle clock concept"
           class="sketch-image"
         />
-      </div>
     </section>
 
 
@@ -153,7 +142,6 @@
 
       <!-- Reflection -->
       <div class="reflection">
-
         <h3>Why did you choose the dataset and story?</h3>
         <p>
           I chose this Spotify dataset from Kaggle because it allows me to analyze trends over time, compare artists and songs, and explore relationships between popularity and audience reach. The dataset includes a mix of track, artist, and album information from 2009–2025, including variables like artist popularity, artist follower count, and track popularity. This made it possible to compare artists by scale, popularity, and content.
