Tab Name Change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button type="button" class="tab-btn" data-target="tab4" data-sketch="sk4" role="tab">HWK 4. C</button>
 
       <!-- Homework 5 -->
-      <button type="button" class="tab-btn" data-target="tab5" data-sketch="sk5" role="tab">HW 5</button>
+      <button type="button" class="tab-btn" data-target="tab5" data-sketch="sk5" role="tab">HWK 5</button>
     </nav>
 
     <!-- Lab 1: Homepage -->
