Style Changes - Image Size

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
       <!-- Reflection -->
       <div class="reflection">
+        <h2>Reflection:</h2>
         <h3>Why did you choose the dataset and story?</h3>
         <p>
           I chose this Spotify dataset from Kaggle because it allows me to analyze trends over time, compare artists and songs, and explore relationships between popularity and audience reach. The dataset includes a mix of track, artist, and album information from 2009–2025, including variables like artist popularity, artist follower count, and track popularity. This made it possible to compare artists by scale, popularity, and content.
@@ -209,20 +210,20 @@
           For clarity, I included axis labels, tick marks, and a legend placed outside the plot so it wouldn’t obscure the data. In terms of hierarchy, the title is most prominent, followed by a short explanation of how to read the visualization, and then the plot itself. Detailed artist information is revealed only on hover to avoid clutter. For memorability, the pink color scale makes explicitness stand out, while bubble size helps viewers remember which artists dominate the dataset. The hover interaction also helps connect abstract shapes to real artist names.
         </p>
 
-        <h3>Sketches</h3>
-        <h4>Initial Sketch 1</h4>
+        <h2>Sketches:</h2>
+        <h3>Initial Sketch 1</h4>
         <img src="images/Initial1.png" alt="Initial Sketch 1" class="sketch-image">
 
-        <h4>Initial Sketch 2</h4>
+        <h3>Initial Sketch 2</h4>
         <img src="images/Initial2.png" alt="Initial Sketch 2" class="sketch-image">
 
-        <h4>Initial Sketch 3</h4>
+        <h3>Initial Sketch 3</h4>
         <img src="images/Initial3.png" alt="Initial Sketch 3" class="sketch-image">
 
-        <h4>Initial Sketch 4</h4>
+        <h3>Initial Sketch 4</h4>
         <img src="images/Initial4.png" alt="Initial Sketch 4" class="sketch-image">
 
-        <h4>Iterated Sketch</h4>
+        <h3>Iterated Sketch</h4>
         <img src="images/Iterated-Sketch.jpg" alt="Iterated Sketch" class="sketch-image">
 
         <p class="sketch-explanation">
