--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
 
         <h2>Sketches:</h2>
         <h3>Initial Sketch 1</h4>
-        <img src="images/Initial1.png" alt="Initial Sketch 1" class="sketch-image">
+        <img src="images/Initial1.jpg" alt="Initial Sketch 1" class="sketch-image">
 
         <h3>Initial Sketch 2</h4>
-        <img src="images/Initial2.png" alt="Initial Sketch 2" class="sketch-image">
+        <img src="images/Initial2.jpg" alt="Initial Sketch 2" class="sketch-image">
 
         <h3>Initial Sketch 3</h4>
-        <img src="images/Initial3.png" alt="Initial Sketch 3" class="sketch-image">
+        <img src="images/Initial3.jpg" alt="Initial Sketch 3" class="sketch-image">
 
         <h3>Initial Sketch 4</h4>
-        <img src="images/Initial4.png" alt="Initial Sketch 4" class="sketch-image">
+        <img src="images/Initial4.jpg" alt="Initial Sketch 4" class="sketch-image">
 
         <h3>Iterated Sketch</h4>
         <img src="images/Iterated-Sketch.jpg" alt="Iterated Sketch" class="sketch-image">
