title explanation update

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </p>
         <h3>Why did you choose that title for your story?</h3>
         <p>
-          I called it “Spotify Artist Impact Map” because it maps artists into a shared space where their “impact” can be compared from multiple angles: followers (reach), popularity (mainstream success), and how much they appear in the dataset (bubble size). The word “map” also reflects that this isn’t a single ranking, but a layout that allows viewers to explore clusters and outliers.
+          I called it “Measuring Artist Success on Spotify: More Than Just Followers” because it maps artists into a shared space where their “impact” can be compared from multiple angles: followers (reach), popularity (mainstream success), and how much they appear in the dataset (bubble size). The word “map” also reflects that this isn’t a single ranking, but a layout that allows viewers to explore clusters and outliers.
         </p>
 
         <h3>Is the visualization author-driven or user-driven? What genre is it?</h3>
